# post-training-failure-evals

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: eval.yaml  full.yaml  smoke.yaml
docs/example_run/: metrics.json  report.md  summary.json
pte/: __init__.py  cli.py  config.py  judge.py  metrics.py  models.py  report.py  runner.py  utils.py
pte/data/: __init__.py  loaders.py
pte/data/builtin/: factual_qa.jsonl  false_premises.jsonl  instructions.jsonl  ood.jsonl  safety.jsonl
pte/evaluators/: __init__.py  base.py  calibration.py  dist_shift.py  reward_hacking.py  safety.py  sycophancy.py  verbosity.py
scripts/: dashboard.py
tests/: test_data.py  test_evaluators.py  test_metrics.py
training/: README.md  train_dpo.py  train_sft.py
